PLANET-2765 - Breadcrumb: Fix spacing inconsistencies on RTL

--- a/assets/scss/partials/_breadcrumbs.scss
+++ b/assets/scss/partials/_breadcrumbs.scss
@@ -28,13 +28,12 @@
       content: "\2022";
       pointer-events: none;
       display: inline-block;
-      position: absolute;
-      left: -15px;
-      top: 0;
+      margin-left: -12px;
+      margin-right: 8px;
 
       html[dir="rtl"] & {
-        left: auto;
-        right: 5px;
+        margin-right: -12px;
+        margin-left: 8px;
       }
     }
   }
@@ -52,7 +51,7 @@
       margin-right: 7px;
 
       html[dir="rtl"] & {
-          margin-right: 20px;
+        margin-right: 20px;
       }
 
       &.page-type {
